# umaapy

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  playground.py  pyproject.toml  requirements.txt  sonar-project.properties
.devcontainer/: cyclonedds.xml  devcontainer.json
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml
docs/: AI_AGENT_PROMPT_CONTEXT.md  AI_AGENT_TASK_TEMPLATE.md  conf.py  index.rst  rti_reference_audit_notes.rst
docs/adr/: adr-0001-cyclone-first-single-backend.rst  index.rst
docs/agent-prompts/: issue-22-agent-prompt.md
docs/umaapy/core/: command_provider.rst  index.rst  report_consumer.rst  report_provider.rst
docs/umaapy/util/: index.rst
docs/usage/: development.rst  getting_started.rst  installation.rst
docs/wiki/: index.rst
docs/wiki/Requirements/: Architectural.rst  index.rst
scripts/: generate_types.py
src/umaapy/: __init__.py  _version.py  umaa_types.py
src/umaapy/UMAA/: .idlpy_manifest  __init__.py
src/umaapy/core/: command_consumer.py  command_provider.py  report_consumer.py  report_provider.py
src/umaapy/dds_backend/: __init__.py  dds.py  idl.py
src/umaapy/examples/: global_vector_control.py
src/umaapy/resource/: umaapy_qos_lib.xml
src/umaapy/tools/: __init__.py  generate_types.py
src/umaapy/util/: command_session.py  dds_configurator.py  event_processor.py  multi_topic_reader.py  multi_topic_reader_decorators.py  multi_topic_support.py  multi_topic_writer.py  multi_topic_writer_decorators.py  provider.py  reader_listener.py  timestamp.py  (+4 more)
tests/: conftest.py  test_cyclone_types.py  test_types.py
tests/core/: test_command_consumer.py  test_command_provider.py  test_report_consumer.py  test_report_provider.py
tests/integration/: test_conditional_report.py  test_mission_plan_report.py  test_objective_executor_control.py
tests/util/: test_dds_configurator.py  test_event_processor.py  test_generate_types.py  test_multi_topic_reader.py  test_multi_topic_reader_decorators.py  test_multi_topic_support.py  test_multi_topic_writer.py  test_multi_topic_writer_decorators.py  test_specializations.py  test_timestamp.py  test_uuid_factory.py
umaapy_types/: pyproject.toml
(+1187 files in other folders)
